--- a/note/介绍.md
+++ b/note/介绍.md
@@ -1,2 +1,12 @@
 #### 介绍
--  Polygon PoS（Proof-of-Stake）链。该项目采用权益证明共识机制，主要通过定期向以太坊区块链提交 Polygon PoS 链的快照来实现，这些快照由 Polygon 的 100 个验证器来提交，克服了以太坊吞吐量低的问题，具有更快的交易处理速度，从而降低 Gas 费，用户体验在一定程度上得到保障
+
+- 一句话说，Polygon就是以以太坊为基础的独立侧链。
+  - Polygon最初名叫Matic，发行的代币也叫Matic，国内称为“马蹄”。马蹄团队梦想是让所有公链实现跨链互通，成为“区块链的互联网”。但在当时的市场条件下并没有成功。
+  - 于是，他们迅速转变思路，认准了以太坊当大哥，决定把目标从“区块链的互联网”变为“以太坊兼容链的互联网”，专心当起了以太坊的好帮手。
+  - 马蹄创始三人组，印度咖喱味十足
+  - Polygon完全兼容以太坊的EVM（虚拟机，智能合约运行的环境）。以太坊用户在主链就能将资产跨链到Polygon上，之后就可以在Polygon上进行交易或处理资产。
+  - 和以太坊的13TPS比起来，Polygon的交易速度达到了7200TPS。从单日交易量看，Polygon能达到500万笔，而以太坊只有120万左右。
+  - 反映在成本上，Polygon的交易手续费只有以太坊的0.01%。
+  - 虽然安全技术赶不上以太坊，但Polygon安全性并不低，而且带来的效益也十分显著
+- Polygon PoS（Proof-of-Stake）链。该项目采用权益证明共识机制，主要通过定期向以太坊区块链提交 Polygon PoS 链的快照来实现，这些快照由
+  Polygon 的 100 个验证器来提交，克服了以太坊吞吐量低的问题，具有更快的交易处理速度，从而降低 Gas 费，用户体验在一定程度上得到保障
