--- a/note/介绍.md
+++ b/note/介绍.md
@@ -10,3 +10,4 @@
   - 虽然安全技术赶不上以太坊，但Polygon安全性并不低，而且带来的效益也十分显著
 - Polygon PoS（Proof-of-Stake）链。该项目采用权益证明共识机制，主要通过定期向以太坊区块链提交 Polygon PoS 链的快照来实现，这些快照由
   Polygon 的 100 个验证器来提交，克服了以太坊吞吐量低的问题，具有更快的交易处理速度，从而降低 Gas 费，用户体验在一定程度上得到保障
+- 参考文档： https://wiki.polygon.technology/docs/home/new-to-polygon/
